--- a/public/scripts/app/app.template.html
+++ b/public/scripts/app/app.template.html
@@ -1,23 +1,4 @@
-<h1></h1>
-<nav class="navbar navbar-default">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-            <a class="navbar-brand">Reddit Clone</a>
-        </div>
-
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        </div>
-    </div>
-</nav>
-
-<main class="container">
-
+<h1>alsdfjhasl;kdhfa;lskdj</h1>
+<main>
     <ui-view></ui-view>
-
 </main>
