navbar and docs

--- a/public/index.html
+++ b/public/index.html
@@ -19,5 +19,6 @@
     <script src="/js/app/app.config.js"></script>
     <script src="/js/app/app.component.js"></script>
     <script src="/js/navbar/navbar.component.js"></script>
+    <script src="/js/docs/docs.component.js"></script>
   </body>
 </html>
