--- a/public/js/navbar/navbar.template.html
+++ b/public/js/navbar/navbar.template.html
@@ -1,1 +1,8 @@
-<nav class="navbar"></nav>
+<nav class="navbar">
+  <h1>Krug</h1>
+  <ul>
+    <li><a ui-sref="">Visualize</a></li>
+    <li><a ui-sref="">Identify</a></li>
+    <li><a ui-sref="test">Docs</a></li>
+  </ul>
+</nav>
