--- a/public/index.html
+++ b/public/index.html
@@ -19,5 +19,7 @@
     <script src="/js/app/app.config.js"></script>
     <script src="/js/app/app.component.js"></script>
     <script src="/js/navbar/navbar.component.js"></script>
+    <script src="/js/sidebar/sidebar.component.js"></script>
+
   </body>
 </html>
