--- a/public/js/sidebar/sidebar.template.html
+++ b/public/js/sidebar/sidebar.template.html
@@ -1,4 +1,4 @@
-<aside class="sidebar">
+<div class="sidebar">
     <h2>Useful Resources</h2>
     <ul>
         <li>
@@ -29,4 +29,4 @@
         </div>
     </form>
 
-</aside>
+</div>
