component set up

--- a/public/js/sidebar/sidebar.template.html
+++ b/public/js/sidebar/sidebar.template.html
@@ -16,6 +16,132 @@
         <li>
             <a href="http://www.texasinvasives.org/">invasive resource</a>
         </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
+        <li>
+            <a href="http://www.texasinvasives.org/">invasive resource</a>
+        </li>
     </ul>
 
     <form name="$ctrl.newEmailForm" ng-submit="$ctrl.addToList()">
@@ -23,7 +149,7 @@
             <input name="userEmail" ng-model="$ctrl.email.userEmail">
         </div>
         <div>
-          <button type="submit">
+            <button type="submit">
             submit
           </button>
         </div>
