--- a/public/index.html
+++ b/public/index.html
@@ -21,5 +21,6 @@
     <script src="/js/navbar/navbar.component.js"></script>
     <script src="/js/sidebar/sidebar.component.js"></script>
     <script src="/js/docs/docs.component.js"></script>
+    <script src="/js/console/console.component.js"></script>
   </body>
 </html>
