style identify page

--- a/public/index.html
+++ b/public/index.html
@@ -23,5 +23,6 @@
     <script src="/js/docs/docs.component.js"></script>
     <script src="/js/console/console.component.js"></script>
     <script src="/js/info/info.component.js"></script>
+    <script src="/js/identify/identify.component.js"></script>
   </body>
 </html>
