--- a/public/js/app/app.template.html
+++ b/public/js/app/app.template.html
@@ -1,4 +1,5 @@
 <nav-bar></nav-bar>
 <side-bar></side-bar>
-<info></info>
-<ui-view></ui-view>
+<div class="viewport">
+  <ui-view></ui-view>
+</div>
