linked uirouter views

--- a/public/js/navbar/navbar.template.html
+++ b/public/js/navbar/navbar.template.html
@@ -2,7 +2,7 @@
   <h1>Krug</h1>
   <ul>
     <li><a ui-sref="">Visualize</a></li>
-    <li><a ui-sref="">Identify</a></li>
-    <li><a ui-sref="test">Docs</a></li>
+    <li><a ui-sref="identify">Identify</a></li>
+    <li><a ui-sref="docs">Docs</a></li>
   </ul>
 </nav>
