wired visualize view

--- a/public/index.html
+++ b/public/index.html
@@ -24,5 +24,6 @@
     <script src="/js/console/console.component.js"></script>
     <script src="/js/info/info.component.js"></script>
     <script src="/js/identify/identify.component.js"></script>
+    <script src="/js/visualize/visualize.component.js"></script>
   </body>
 </html>
