--- a/public/js/navbar/navbar.template.html
+++ b/public/js/navbar/navbar.template.html
@@ -1,7 +1,7 @@
 <nav class="navbar">
   <h1>Krug</h1>
   <ul>
-    <li><a ui-sref="">Visualize</a></li>
+    <li><a ui-sref="visualize">Visualize</a></li>
     <li><a ui-sref="identify">Identify</a></li>
     <li><a ui-sref="docs">Docs</a></li>
   </ul>
