--- a/public/js/console/console.template.html
+++ b/public/js/console/console.template.html
@@ -1,6 +1,6 @@
 <div class="console">
   <div class="image-view">
-    <img src="http://encyclopedian.artscape.us/ala-alm/albizia_julibrissin.jpg" alt="plant">
+    <img src="https://davisla6.files.wordpress.com/2015/08/arundo-donax-leaf.jpg" alt="plant">
   </div>
   <div class-"image-form">
     <form method="GET" ng-submit="$ctrl.upload($event)">
