--- a/public/js/sidebar/sidebar.template.html
+++ b/public/js/sidebar/sidebar.template.html
@@ -1,146 +1,35 @@
 <div class="sidebar">
-    <h2>Useful Resources</h2>
     <ul>
         <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
+            <a href="http://www.texasinvasives.org/">Texas Invasives</a>
+            <ul>
+              <li><a href="#">Plants</a></li>
+              <li><a href="#">Insects</a></li>
+            </ul>
         </li>
         <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
+            <a href="http://www.texasinvasives.org/">Wildflower Center</a>
+            <ul>
+              <li><a href="#">Plants</a></li>
+              <li><a href="#">Insects</a></li>
+              <li><a href="#">Insects</a></li>
+              <li><a href="#">Insects</a></li>
+            </ul>
         </li>
         <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
+            <a href="http://www.texasinvasives.org/">USDA Resources</a>
+            <ul>
+              <li><a href="#">Plants</a></li>
+              <li><a href="#">Plants</a></li>
+              <li><a href="#">Insects</a></li>
+            </ul>
         </li>
         <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
-        </li>
-        <li>
-            <a href="http://www.texasinvasives.org/">invasive resource</a>
+            <a href="http://www.texasinvasives.org/">Texas.gov</a>
+            <ul>
+              <li><a href="#">Plants</a></li>
+              <li><a href="#">Insects</a></li>
+            </ul>
         </li>
     </ul>
 
