--- a/public/js/navbar/navbar.template.html
+++ b/public/js/navbar/navbar.template.html
@@ -1,5 +1,5 @@
 <nav class="navbar">
-  <h1>Krug</h1>
+  <p>Plant ID</p>
   <ul>
     <li><a ui-sref="visualize">Visualize</a></li>
     <li><a ui-sref="identify">Identify</a></li>
