--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,10 @@
   <body>
 
     <ui-view></ui-view>
-
     <script src="/jquery/dist/jquery.min.js"></script>
     <script src="/angular/angular.min.js"></script>
     <script src="/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="/js/util.js" charset="utf-8"></script>
     <script src="/js/app/app.module.js"></script>
     <script src="/js/app/app.config.js"></script>
     <script src="/js/app/app.component.js"></script>
