--- a/public/js/console/console.template.html
+++ b/public/js/console/console.template.html
@@ -3,7 +3,7 @@
     <img src="https://davisla6.files.wordpress.com/2015/08/arundo-donax-leaf.jpg" alt="plant">
   </div>
   <div class-"image-form">
-    <form method="GET" ng-submit="$ctrl.upload($event)">
+    <form method="POST" enctype="multipart/form-data" name="upload" action="/api/classify">
       <input type="file" name="payload">
       <input type="submit" value="Upload">
     </form>
