--- a/public/js/sidebar/sidebar.template.html
+++ b/public/js/sidebar/sidebar.template.html
@@ -3,32 +3,31 @@
         <li>
             <a href="http://www.texasinvasives.org/">Texas Invasives</a>
             <ul>
-              <li><a href="#">Plants</a></li>
-              <li><a href="#">Insects</a></li>
+                <li><a href="http://www.texasinvasives.org/i101/">Invasives 101</a></li>
+                <li><a href="http://www.texasinvasives.org/plant_database/index.php">Invasive Plants Database</a></li>
+                <li><a href="http://www.texasinvasives.org/action/">Take Action</a></li>
             </ul>
         </li>
         <li>
-            <a href="http://www.texasinvasives.org/">Wildflower Center</a>
+            <a href="https://www.wildflower.org/">Wildflower Center</a>
             <ul>
-              <li><a href="#">Plants</a></li>
-              <li><a href="#">Insects</a></li>
-              <li><a href="#">Insects</a></li>
-              <li><a href="#">Insects</a></li>
+                <li><a href="http://www.wildflower.org/plants/">Native Plant Guide</a></li>
+                <li><a href="http://www.wildflower.org/suppliers/">Native Plant Suppliers</a></li>
+                <li><a href="http://www.wildflower.org/gallery/">Native Plant Images</a></li>
             </ul>
         </li>
         <li>
-            <a href="http://www.texasinvasives.org/">USDA Resources</a>
+            <a href="https://www.usda.gov/">USDA Resources</a>
             <ul>
-              <li><a href="#">Plants</a></li>
-              <li><a href="#">Plants</a></li>
-              <li><a href="#">Insects</a></li>
+                <li><a href="https://plants.usda.gov/java/">Plants Data Base</a></li>
+                <li><a href="https://plants.usda.gov/gallery.html">Plant Image Gallery</a></li>
             </ul>
         </li>
         <li>
-            <a href="http://www.texasinvasives.org/">Texas.gov</a>
+            <a href="http://tpwd.texas.gov/">Texas Parks and Wildlife</a>
             <ul>
-              <li><a href="#">Plants</a></li>
-              <li><a href="#">Insects</a></li>
+                <li><a href="http://tpwd.texas.gov/huntwild/wild/wildlife_diversity/txndd/">Texas Natural Diversity Database</a></li>
+                <li><a href="http://tpwd.texas.gov/huntwild/wild/wildlife_diversity/master_naturalist/">Texas Master Naturalist Program</a></li>
             </ul>
         </li>
     </ul>
