--- a/public/js/info/info.template.html
+++ b/public/js/info/info.template.html
@@ -1,111 +1,3 @@
 <article class="info">
-    <h1>Invaders of Texas</h1>
-    <br>
-    <h4>A Citizen Science Program to Detect and Report Invasive Species</h4>
-    <br>
-    <hr>
-    <br>
-    <p>Citizen Scientists are volunteers who participate as field assistants in scientific studies. They are not paid, and most are not scientists. Many major and well-known programs have adopted the citizen scientist model such as the Cornell Lab of Ornithology’s
-        Backyard Bird Counts, Audubon’s Christmas Bird Counts and Texas Parks and Wildlife’s Nature Trackers. Currently, there are very few citizen science programs focused on invasive species, and the ones that do, usually focus on citizen-based eradication
-        efforts. Over the last five years we have developed a very successful citizen science program that emphasizes invasive species detection and reporting that has substantially improved our knowledge of the distribution of invasive plants in Texas.
-        In addition, this program provides much needed baseline data that supports rapid response, control and management and restoration efforts by federal, state and municipal resource managers. The Invaders program centers around a statewide network
-        of citizen scientist teams trained to seek out and report outbreaks of harmful invasive species in their local areas. These teams are organized geographically into regional satellite groups connected to local resource managers who coordinate appropriate
-        responses to control the spread of unwanted invaders. The program was piloted in 2005, and in 2006 and 2007 the program was introduced in twelve geographically distinct areas in Texas. In mid-2008 we received funding to hire a full-time coordinator
-        and in 2009 conducted 13 training workshops, almost doubling the number of satellites and citizen scientists.
-    </p>
-    <br>
-    <p>II. The Satellite Network – http://www.texasinvasives.org/invaders/satellite_results.php Regional teams, called satellites, are the foundation of the Invaders of Texas program (Figure 1). Texas covers a vast amount of space; therefore it would be
-        impossible for a centralized organization to provide expert assistance to all citizen scientists. Satellites offer a local network connected with local experts to help with local issues and answer local questions. One of the lessons we have learned
-        is the importance of strong leadership within the satellites. The satellite leader is the main contact for the satellite, and is responsible for keeping the satellite organized, putting together field trips and work days, helping answer questions
-        from the individual citizen scientists, and recruiting more members to the satellite. Once satellite leaders feel comfortable with the program, they are allowed to conduct their own “mini-workshops” to recruit citizen scientists into their satellites.</p>
-    <br>
-    <p>III. Recruitment & Training A. Recruitment – http://www.texasinvasives.org/invaders/workshop_results.php Citizen Scientists are recruited through local volunteer based conservations organizations such as Texas Master Naturalist, Native Plant Societies
-        and Master Gardeners. The Texas Master Naturalist program provides most of our citizen scientists. Texas Master Naturalist chapters are well established throughout Texas and the volunteers are already versed in the local flora and fauna. The local
-        host is responsible for the bulk of recruiting and locating a venue for the workshop. The local host is also responsible for supplying a list and specimens of 10-12 local invasive plant species that are commonly found and easy to identify. We
-        have found this approach allows individuals to become familiar with invasive species in their area and reduces the anxiety associated with trying to learn a large number of invasive species in one day. B. Workshops – http://www.texasinvasives.org/invaders/toolkit.php
-        All workshops are organized by the local host and administered by personnel from the Wildflower Center or the Texas Forest Service. The workshop is a 1-2 day intensive training using the 33 page Invaders of Texas training manual. Individuals are
-        taught to identify local invasive plants, field safety, how to use a GPS, how to collect data, and how to submit the data into the online database (Appendix I). Once an individual has completed a workshop they are free to login and start making
-        species observations. To date, thirty-one workshops have been conducted throughout Texas (Appendix II) training over 700 citizen scientists (Figure 2).
-    </p>
-    <br>
-    <p>C. Online Training – http://www.texasinvasives.org/training/ In an effort to recruit more citizen scientists, an online training module was launched in 2009 to recruit outside the satellite network. The online training also serves as an enrichment
-        tool for existing citizen scientists and educates the public about invasive species in Texas. The online training includes eight modules modeled after the eight chapters in the Invaders of Texas training manual. Each module is accompanied by a
-        quiz. Once completed, individuals can create an account and start reporting species observations. To date, 108 individuals have gone through the online training.
-    </p>
-    <br>
-    <p>D. High School Invaders In 2008, we began exporting the Invaders program into high school science classes. We have held one teacher-training workshop for 10 science teachers and two workshops (approximately 150 students) at area high schools. We have
-        found the Invaders program to be exceptionally popular with high school science teachers not only because it is an important environmental issue (invasive species), but also because it involves field work, data collection, GPS and mapping, digital
-        imaging and computer technology. The online training modules have become a particularly effective tool for recruiting students and teachers in high school science classes.
-    </p>
-    <br>
-    <hr>
-    <br>
-    <p>IV. Website Texasinvasives.org is home to the Invaders program and features an Invasive Plant Database, the Early Detection and Reporting Database (EDRD) containing species observations submitted by 4 citizen scientists and the Invaders Mapping Application.
-        The website also contains downloadable invasive species publications, links to national, regional, state and local invasive species initiatives and many other resources. Over the last five years, texasinvasives.org has positioned itself as the
-        number one clearinghouse for invasive species information in Texas (Figure 3).
-    </p>
-    <br>
-    <p>Figure 3. – Total page hits at texasinvasives.org from 2005 to 2009. A. Invasive Plant Database – http://www.texasinvasives.org/invasives_database/ The invasive plant database features 140 plant species that occur in Texas and have been listed as
-        invasive in other states. The interactive database includes the Texas Department of Agriculture’s list of 33 noxious weed species and Texas Parks and Wildlife’s list of 13 prohibited aquatic plant species. Citizen scientists can report occurrences
-        of any species in the invasive plant database and new species can be added to the database as needed. For each species, the invasive plants database provides a description and image along with information on taxonomy, distribution, habitat, history
-        of introduction, ecological threat, management techniques and links to additional resources.
-    </p>
-    <br>
-    <p>B. Early Detection and Reporting Database – http://www.texasinvasives.org/observations Based on North American Weed Management Association (NAWMA) standards, the Early Detection and Reporting Database performs four functions: 1) It serves as the data
-        submission system for citizen scientists to report invasive species observations, 2) It includes a “behind the scenes” validation system so that validators can verify species observations submitted by the citizen scientists, 5 3) It provides
-        an easily accessible venue for government and non-government organizations to download species observations, and 4) It feeds GPS coordinates and species observations to the Invaders Mapping Application.</p>
-    <br>
-    <p>C. Invaders Mapping Application – http://www.texasinvasives.org/observations/mapping.php The Invaders Mapping Application uses a Google map interface to plot validated species observations submitted by citizen scientists. Visitors to the website can
-        map observations by satellite or by species or any combination of satellite and species. The mapping application includes all the functionality and ease of use provided by Google Maps and all map points are linked to individual records in the
-        Early Detection and Reporting Database. Because each map point is linked to an individual and satellite, we have found the maps act as a reward for the citizen scientists and have inspired lighthearted competition among satellite groups.
-    </p>
-    <br>
-    <hr>
-    <br>
-    <p>V. Data Collection, Validation and Sharing A. Species Observations For each invasive species occurrence, citizen scientists record the species, date observed, time spent in the field, GPS coordinates, amount of disturbance, patch type, species abundance
-        and notes about the location onto a field data sheet. These data, along with a digital image that they are required to upload for validation purposes, constitute a single species observation. Upon returning from the field, citizen scientists login
-        and enter their field data into the Early Detection and Reporting Database. There is a one-to-one correspondence between the field data sheet and the online data entry form to facilitate data entry. One of the lessons we learned is that citizen
-        scientists are uncomfortable making their own scientific decisions. Originally, citizen scientists were required to report numerous ecological parameters for each observation but this proved to be intimidating and resulted in fewer species observations.
-        Since the primary goal for the program is to develop baseline maps of targeted invasive species, we scaled back the collection criteria in favor of more observations while still meeting the minimum North American Weed Management Association (NAWMA)
-        standard. This change has proven effective and has increased the amount of species observations submitted by the citizen scientists.</p>
-    <br>
-    <p>B. Validation Citizen science-based projects are often criticized for lacking the rigor of traditional scientific studies. For this reason, we validate all species observations submitted by citizen scientists. Species observations are validated using
-        the GPS coordinates, images and other information submitted by the citizen scientist. If, for some reason, a species observation does not pass the validation test (ex. GPS coordinates are off or the invasive species is misidentified), the citizen
-        scientist is contacted by the satellite leader or program coordinator and given the opportunity to correct the mistake. Only valid observations are made publicly available in the Early Detection and Reporting Database (http://www.texasinvasives.org/observations/)
-        the Mapping Application (http://www.texasinvasives.org/observations/mapping.php) or for export.
-    </p>
-    <br>
-    <p>C. Data Sharing All data in the Early Detection and Reporting Database is freely available for export to Microsoft Excel. Once exported, the data can be easily converted to KML, XML, CVS, or MDB files and imported into any Geographic Information System
-        for further analysis. In addition to the export feature, we share Invaders of Texas data with the Early Detection and Distribution Mapping System (EDDMapS) developed by the Center for Invasive Species and Ecosystem Health. EDDMapS is a national
-        effort to collate multiple datasets to map the spread of invasive species throughout the United States. As indicated in Figure 4 and at http://www.eddmaps.org/texas/, the species observations from the Invaders of Texas program are making a significant
-        contribution to this national effort. Figure 4. – County map of Arundo donax in the United States (EDDMapS). Most counties highlighted in Texas are contributions from the Invaders of Texas program.</p>
-    <br>
-    <p>V. Outreach and Public Awareness The Invaders of Texas program and its companion website (http://www.texasinvasives.org/) have attracted statewide media attention appearing in newspapers, on radio shows and in local television news. In addition, we
-        and our partners have traveled the state and beyond giving professional and public presentations about the program (Appendix III). The website, www.texasinvasives.org, averages between 3,000 and 5,000 visitors per month with traffic from 225 Texas
-        cities, 1,140 cities in the U.S. and over 100 countries. The Invaders of Texas program 7 is taking the invasive species message to the general public and enlisting their aid to detect and report invasive species in their neighborhoods.</p>
-    <br>
-    <hr>
-    <br>
-    <p>VI. Summary The Invaders of Texas program is an unqualified success in Texas and we believe other states could and should enlist the aid of their citizens to detect and report invasive species. As the program has developed over the last five years,
-        we have had many successes and learned many lessons. Of all the lessons learned, four program features stand out as having contributed the most to the program’s success:</p>
-    <br>
-    <p>1) Network – The network of satellite groups with strong local leadership is essential in a state as big as Texas.</p>
-    <br>
-    <p>2) Technology – Seamless integration between all in situ program features (citizen scientists, satellites and workshops) and the web-based data entry and mapping systems allowed us to effectively manage a geographically distributed network.</p>
-    <br>
-    <p>3) Cooperation – Partnerships between satellite groups and local resource managers who can assist citizen scientists and coordinate appropriate responses to control the spread of unwanted invaders.</p>
-    <br>
-    <p>4) Support – Dependable and repeated funding from state and federal partners (Texas Forest Service, U.S. Forest Service Forest Health Protection, U.S. Forest Service National Forests and Grasslands in Texas, Texas Parks and Wildlife and others) gave
-        the program stability and provided for a full time coordinator to expand the program and respond to the needs of the citizen scientists and satellite leaders.</p>
-    <br>
-    <hr>
-    <br>
-    <p>With these features as the foundation of the Invaders of Texas program over 700 citizen scientists have collectively logged some 3,000 hours and submitted over 8,000 species observations. This information is being used by resource managers to control
-        and eradicate invasive species, by scientists to predict their distributions and by policymakers to understand the scope of the invasive species problem in Texas. The Lady Bird Johnson Wildflower Center appreciates the opportunity to partner with
-        the U.S. Forest Service Forest Health Protection, U.S. Forest Service National Forests and Grasslands in Texas, Texas Forest Service, Texas Parks and Wildlife, Texas Master Naturalists and others on the Invaders of Texas Citizen Science program.
-        As described in this five-year report we have made significant progress along each of the program’s major dimensions including the number of citizen scientists engaged in the program, the number and quality of species observations, the amount
-        of territory covered by satellites, and the widespread participation by regional coordinators, volunteers, and cooperating agencies. Through this program, presentations, partnerships, and the website the Wildflower Center and its partners have
-        positioned themselves as the state leaders on this important issue threatening Texas’ natural heritage.</p>
-        <br>
-        <br>
+  <h1>{{$ctrl.confidence}}</h1>
 </article>
